<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    tools:context=".ui.join.JoinClassFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:text="@string/app_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="104dp"
        android:textColor="#222222"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/classIdLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginTop="25dp"
        app:helperTextEnabled="false"
        app:hintEnabled="false"
        app:hintAnimationEnabled="false"
        app:errorEnabled="false"
        app:endIconMode="clear_text"
        app:boxBackgroundMode="filled"
        app:boxBackgroundColor="@null"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/classId"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@null"
            android:hint="@string/prompt_class_id"
            android:textColorHint="#B0B6BE"
            android:textColor="?attr/colorPrimary"
            android:inputType="number"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nicknameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/classIdLayout"
        android:layout_marginTop="10dp"
        app:helperTextEnabled="false"
        app:hintEnabled="false"
        app:hintAnimationEnabled="false"
        app:errorEnabled="false"
        app:endIconMode="clear_text"
        app:boxBackgroundMode="filled"
        app:boxBackgroundColor="@null"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nickname"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@null"
            android:inputType="text"
            android:hint="@string/prompt_nickname"
            android:textColorHint="#B0B6BE"
            android:imeActionLabel="@string/action_join_class_short"
            android:imeOptions="actionDone"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/joinClass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="70dp"
        android:enabled="false"
        android:text="@string/action_join_class"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearance="?attr/shapeAppearanceLargeComponent"
        android:textSize="16sp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        />

    <TextView
        android:id="@+id/disclaimer"
        tools:text="@string/disclaimer"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/joinClass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceCaption"
        />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />

</androidx.constraintlayout.widget.ConstraintLayout>